# WorldRec

./: .gitignore  PLAN.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
scripts/: build-sidecar.mjs
sidecar/: go.mod  go.sum
sidecar/cmd/worldrec-ai/: main.go
sidecar/internal/workflow/: errors.go  errors_test.go  parse.go  parse_test.go  prompts.go  recommendation_mode_test.go  types.go  types_test.go  workflow.go
src/: App.svelte  app.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  lib.rs  settings_apply.rs  tray.rs  vrchat_api.rs  vrchat_auth.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: connection.rs  models.rs  repository.rs  schema.rs
src-tauri/src/log_watcher/: finalize.rs  mod.rs  parser.rs  processor.rs  reader.rs  service.rs  state.rs  stay_duration.rs  visit_session.rs
src-tauri/src/settings/: mod.rs
src/lib/api/: commands.ts  events.ts
src/lib/data/: visitMapper.ts  visitTypes.ts  worldrec.ts
src/lib/state/: histories.svelte.ts  library.svelte.ts  worldPreviews.svelte.ts
src/lib/utils/: history.ts
src/lib/world/: worldDetailPreview.ts
src/styles/: app-shell.css  date-rail.css  explorer-panel.css  main-content.css  recommendation-card.css  right-panel.css  sidebar.css  summary-card.css  sync-status-card.css  topbar.css  visit-card.css  visit-timeline.css
(+30 files in other folders)
