[package]
name = "worldrec"
version = "0.1.2"
description = "VRChat world visit history recorder and explorer"
license = "GPL-3.0-only"
repository = "https://github.com/Hiragi0w0/worldrec"
edition = "2021"
rust-version = "1.77.2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
chrono = "0.4.45"
rusqlite = { version = "0.40.1", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rand = "0.8"
tokio = { version = "1", features = ["time"] }
keyring = { version = "3", features = ["windows-native"] }
base64 = "0.22"
urlencoding = "2"
